# hortalink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  application.example.toml  docker-compose.yml  localhost.nginx.conf  nginx.conf  nginx.template.conf  pnpm-lock.yaml
cdn-server/: Cargo.toml  Dockerfile
cdn-server/resources/products/: abobora  acelga  agriao  aipo  alcachofra  alface  alho  alho-poro  almeirao  batata  batata-doce  berinjela  bertalha  beterraba  brocoli  cebola  cebolinha  cenoura  chicoria  chuchu  coentro  couve  couve-chinesa  couve-flor  ervilha  espinafre  feijao-vagem  gengibre  inhame  jilo  mandioca  mandioquinha-salsa  maxixe  melancia  melao  milho-verde  moranga  morango  mostarda  nabo  (+11 more)
cdn-server/src/: main.rs
cdn-server/src/app/: auth.rs  server.rs
cdn-server/src/json/: error.rs  mod.rs  query.rs
cdn-server/src/models/: users.rs
cdn-server/src/routes/: mod.rs
cdn-server/src/routes/avatars/: delete.rs  get.rs  mod.rs  post.rs  put.rs
cdn-server/src/routes/products/: delete.rs  get.rs  mod.rs  post.rs
cdn-server/src/routes/resources/: mod.rs
cdn-server/src/routes/resources/products/: get.rs  mod.rs
cdn-server/src/utils/: image.rs
core/: Cargo.toml
core/src/: database.rs  image.rs  lib.rs  services.rs
rest-server/: Cargo.toml  Dockerfile
rest-server/migrations/: 01_users.sql  02_customers.sql  03_schedules.sql  03_sellers.sql  04_schedules.sql  04_sellers.sql  05_products.sql  06_ratings.sql  06_ratings.up.sql  07_cart.sql  07_cart.up.sql  08_notifications.sql  09_blacklist.sql  09_blacklist.up.sql  10_session.sql  11_followers.sql  12_chats.sql  12_messages.sql  13_messages.sql  20231224161433_init.up.sql  20240215101212_user.sql  20240215101943_session.sql  20240215193234_users.up.sql  20240215200334_schedules.up.sql  20240215201539_sellers.up.sql  20240215202831_inventories.up.sql  20240215202831_products.up.sql  20240216090148_ratings.up.sql  20240216114730_cart.up.sql
rest-server/migrations/common/: products.sql
rest-server/migrations/setup/: 20240215193325_init.down.sql  20240215193325_init.up.sql
rest-server/migrations/setup/migrations/: 20240215193325_init.down.sql
rest-server/src/: app.rs  lib.rs  main.rs  provider.rs
rest-server/src/api/: mod.rs
rest-server/src/api/v1/: mod.rs
rest-server/src/api/v1/auth/: get.rs  mod.rs  post.rs
rest-server/src/api/v1/customers/: mod.rs
rest-server/src/api/v1/oauth/: get.rs  mod.rs  post.rs
rest-server/src/api/v1/products/: get.rs  mod.rs
rest-server/src/api/v1/sellers/: get.rs  mod.rs
rest-server/src/api/v1/users/: get.rs  mod.rs
rest-server/src/app/: auth.rs  backend.rs  mod.rs  provider.rs  server.rs  web.rs
rest-server/src/json/: auth.rs  cart.rs  chats.rs  error.rs  home.rs  mod.rs  notifications.rs  products.rs  ratings.rs  schedules.rs  sellers.rs  users.rs  utils.rs  validations.rs
rest-server/src/models/: cart.rs  chats.rs  customers.rs  mod.rs  notifications.rs  products.rs  ratings.rs  schedules.rs  sellers.rs  users.rs
rest-server/src/routes/: mod.rs
rest-server/src/routes/auth/: backend.rs  get.rs  mod.rs  post.rs
rest-server/src/routes/users/: get.rs  mod.rs  patch.rs
rest-server/src/routes/v1/: mod.rs
rest-server/src/routes/v1/auth/: get.rs  mod.rs  post.rs
rest-server/src/routes/v1/oauth/: get.rs  mod.rs  post.rs
rest-server/src/routes/v1/users/: get.rs  mod.rs  patch.rs
rest-server/tests/: auth.rs  cart.rs  notifications.rs  products.rs  ratings.rs  schedules.rs  sellers.rs  users.rs
rest-server/tests/common/: mod.rs
rest-server/tests/fixtures/: 01_users.sql  02_customers.sql  03_sellers.sql  04_schedules.sql  05_products.sql  06_ratings.sql  07_cart.sql  blacklist.sql  cart.sql  customers.sql  notifications.sql  products.sql  ratings.sql  schedules.sql  sellers.sql  users.sql
rest-server/tests/json/: user_me.json  users_me.json
rest-server/tests/resources/avatars/1/: 0JwEKZawzGM
rest-server/tests/resources/avatars/10/: 4EfGy4fnZuM
rest-server/tests/resources/avatars/11/: 8fDVj4eXnYw
rest-server/tests/resources/avatars/12/: xsWEjJaUjIw
rest-server/tests/resources/avatars/13/: aMzOjp6Wzs8
rest-server/tests/resources/avatars/15/: 8N6ei5uScvA
rest-server/tests/resources/avatars/16/: CYaGjpYGByw
rest-server/tests/resources/avatars/17/: JkyOjtOw6c4
rest-server/tests/resources/avatars/18/: M02PS5cXbXM
rest-server/tests/resources/avatars/19/: sGTOzpeXns4
rest-server/tests/resources/avatars/2/: 8MCWjqqhxMQ
rest-server/tests/resources/avatars/20/: YJSECACghIY
rest-server/tests/resources/avatars/3/: DA4PDxcXHg8
rest-server/tests/resources/avatars/4/: csmMqJaTaWI
rest-server/tests/resources/avatars/6/: 0emMjJSUjS8
rest-server/tests/resources/avatars/7/: cdyc6Pj5aPI
rest-server/tests/resources/avatars/8/: Ip6OjgaGjA0
rest-server/tests/resources/avatars/9/: cBgULC7iREw
rest-server/tests/resources/products/1/: 9FjOp5ODh6I  EELIDA5Ox+M
rest-server/tests/resources/products/10/: Yjs6Z14vjco
rest-server/tests/resources/products/11/: 0tITGzMxEkY
rest-server/tests/resources/products/12/: jAwGg4OWrh0  ⁄V1vPx2EhDI
rest-server/tests/resources/products/13/: LoeJRtUUDEc
rest-server/tests/resources/products/14/: mvJyY0bWPC0
rest-server/tests/resources/products/15/: OZyWwZTpKec
rest-server/tests/resources/products/2/: mc1NJjMTncM
rest-server/tests/resources/products/3/: ZKg9fM2ZeNE  rCiQlCqVz8w
web/: .env  (+4 more)
websocket/: Cargo.toml  Dockerfile
websocket/src/: app.rs  handshake.rs  main.rs  request.rs
websocket/src/commands/: messages.rs  mod.rs  notifications.rs  users.rs
websocket/src/events/: mod.rs
websocket/src/events/emitters/: mod.rs  notification.rs
websocket/src/events/receivers/: heartbeat.rs  identify.rs  mod.rs
websocket/src/handlers/: event.rs  handshake.rs  identify.rs  mod.rs
websocket/src/http/: handshake.rs  mod.rs  request.rs
websocket/src/json/: error.rs  event.rs  identify.rs  message.rs  mod.rs  notification.rs  notifications.rs  user.rs
websocket/src/server/: mod.rs  session.rs
websocket/src/socket/: mod.rs  server.rs  session.rs
(+378 files in other folders)
