[workspace]
members = [
    "common",
    "core",
    "rest-server",
    "cdn-server",
    "microservices",
    "websocket",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7.2", default-features = false, features = ["http2", "tokio"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
tower-sessions-sqlx-store = { version = "0.12.0", default-features = false, features = ["postgres"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
tower-http = { version = "0.5.1", default-features = false, features = ["cors"] }
amqprs = { version = "1.5.3", default-features = false }
axum_garde = { version = "0.18.0", default-features = false }
garde = { version = "0.18.0", default-features = false, features = ["derive"] }
log = { version = "0.4.20" }
env_logger = { version = "0.11.1" }
serde_json = { version = "1.0.114" }
serde_repr = { version = "0.1.18" }
axum-login = { version = "0.15.0" }

axum-test = { version = "14.3.0", default-features = false, features = ["pretty-assertions"] }