[package]
name = "cdn-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
app_core = { path = "../core" }

axum = { workspace = true, features = ["multipart", "json", "query"] }
axum-login = { workspace = true }
sqlx = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
serde = { workspace = true }

password-auth = { version = "1.0.0" }
thiserror = { version = "1.0.57" }
image = { version = "0.25.0" }
image_hasher = { version = "2.0.0" }

[dev-dependencies]
axum-test = { workspace = true }