[package]
name = "cdn-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
app_core = { path = "../core" }

axum = { version = "0.7.5", features = ["query", "json"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
serde = { workspace = true }
dotenv = { workspace = true }

thiserror = { version = "1.0.57" }
image = { version = "0.25.0" }
tracing = "0.1.40"

[dev-dependencies]
axum-test = { workspace = true }