[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }

amqprs = { workspace = true, features = ["urispec"] }
sqlx = { workspace = true }
log = { workspace = true }

image = { version = "0.25.0" }
image_hasher = { version = "2.0.0" }
axum = { version = "0.7.5", default-features = false, features = ["multipart"] }