[package]
name = "websocket"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
app_core = { path = "../core" }

sqlx = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
web-socket = { version = "0.7.0" }
sha1 = { version = "0.11.0-pre.3" }
base64 = { version = "0.22.0" }