[package]
name = "websocket"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
app_core = { path = "../core" }

sqlx = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
garde = { workspace = true }
serde_json = { workspace = true }

web-socket = { version = "0.7.0" }
sha1 = { version = "0.11.0-pre.3" }
base64 = { version = "0.22.0" }
rmp-serde = { version = "1.1.2" }
thiserror = { version = "1.0.57" }
time = { version = "0.3.34", features = ["serde"] }